# Rust-CL-Total-RDGA

./: .gitignore  Cargo.toml  LICENSE  README.md  diff_chromosome_imut.txt
.github/workflows/: rust.yml
benches/: bench.rs  genetic_bench.rs  normalize.py  sherman4_normalized.txt
data/results/: 08blocks.csv  1138_bus.csv  494_bus.csv  662_bus.csv  685_bus.csv  C125-9.csv  C250-9.csv  C500-9.csv  CAG_mat364.csv  CAG_mat72.csv  CSphd.csv  Chebyshev1.csv  DK01R.csv  EX1.csv  EX2.csv  Erdos971.csv  Erdos981.csv  Erdos991.csv  G1.csv  G10.csv  G11.csv  GD00_a.csv  GD00_c.csv  GD01_b.csv  GD01_c.csv  GD02_a.csv  GD02_b.csv  GD06_theory.csv  GD95_a.csv  GD95_b.csv  GD95_c.csv  GD96_a.csv  GD96_b.csv  GD96_c.csv  GD96_d.csv  GD97_a.csv  GD97_b.csv  GD97_c.csv  GD98_a.csv  GD98_b.csv  (+252 more)
data/results/DIMACS/: C125-9.csv  C250-9.csv  C500-9.csv  MANN-a27.csv  MANN-a9.csv  brock200-1.csv  brock200-2.csv  brock200-3.csv  brock200-4.csv  brock400-1.csv  brock400-2.csv  brock400-3.csv  brock400-4.csv  brock800-1.csv  (+48 more)
irace_tuning/: config.txt  instances-list.txt  instances.txt  irace.Rdata  parameters.txt  scenario.txt  target-runner  target-runner.sh  update_instances.py
irace_tuning/instances/: MANN-a45.txt  random_erdos_renyi_0.txt  random_erdos_renyi_1.txt  random_erdos_renyi_2.txt  random_erdos_renyi_3.txt  random_erdos_renyi_5.txt  random_watts_strogatz_4.txt
scripts/: run.sh
src/: lib.rs  main.rs  utils.rs
src/genetic/: chromosome.rs  crossover.rs  heuristics.rs  mod.rs  population.rs  selection.rs
src/graph/: generator.rs  mod.rs  parser.rs  simple_graph.rs
(+269 files in other folders)
