[package]
name = "cl-total-rdga"
version = "0.1.0"
edition = "2021"
authors = ["Heric da Silva Cruz <hericsilvaho@gmail.com>"]
license = "MIT"

[dependencies]
kambo-graph = { git = "https://github.com/hscHeric/kambo-graph", tag = "v0.1.0" }
rand = "0.8.5"
rayon = "1.10"
num_cpus = "1.16.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
