[package]
name = "cl-total-rdga"
version = "0.1.0"
edition = "2021"
authors = ["Heric da Silva Cruz <hericsilvaho@gmail.com>"]
license = "MIT"

[dependencies]
kambo-graph = { git = "https://github.com/hscHeric/kambo-graph" }
rand = "0.8.5"
rayon = "1.10"
num_cpus = "1.16.0"
log = "0.4.25"
env_logger = "0.11.6"
chrono = "0.4"
